# mongodb-schema-parser

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
examples/: main.rs  schema.rs
hooks/: pre-commit
src/: .error.rs.swn  .lib.rs.swn  error.rs  field.rs  field_type.rs  lib.rs  lib_wasm.rs  schema.rs  value_type.rs
tests/: schema.rs
