[package]
name = "mongodb-schema-parser"
version = "0.5.0"
license = "Apache-2.0"
repository = "https://github.com/lrlna/mongodb-schema-parser"
documentation = "https://docs.rs/mongodb-schema-parser"
description = "MongoDB Schema Analysis"
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "0.1.2"
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
bson = { git = "https://github.com/lrlna/bson-rs", branch = "wasm-dec128" } 
wee_alloc = "0.4.2"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.25"
web-sys = { version = "0.3.16", features = ['console'] }
wasm-bindgen-test = "0.3.8"

[dependencies.wasm-bindgen]
version = "^0.2.37"
features = ["serde-serialize"]
