[package]
name = "mongodb-schema-parser"
version = "0.5.0"
license = "Apache-2.0"
repository = "https://github.com/lrlna/mongodb-schema-parser"
documentation = "https://docs.rs/mongodb-schema-parser"
description = "MongoDB Schema Analysis"
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "0.1.8"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
bson = "2.2"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
web-sys = { version = "0.3.57", features = ['console'] }
wasm-bindgen-test = "0.3.30"

[dependencies.wasm-bindgen]
version = "^0.2.80"
features = ["serde-serialize"]
